## driver/Makefile.am
## This file is (ultimately) included by the top level Makefile.am, so all
## files need to be specified relative to the top level directory.

driverdir = $(prefix)/driver

dist_driver_DATA = driver/filelist.py driver/filetypes.py driver/readargs.py

driver_SCRIPTS = driver/oicc

driver_DST = $(driver_SCRIPTS)
