## parms/Makefile.am
## This file is (ultimately) included by the top level Makefile.am, so all
## files need to be specified relative to the top level directory.

parmsdir = $(prefix)/parms

dist_parms_DATA = \
	parms/LAMD_DEFAULTS \
	parms/LANALYSIS_DEFAULTS \
	parms/LANNOTATE_DEFAULTS \
	parms/LBLOCK_DEFAULTS \
	parms/LCMP_SCHEDS_DEFAULTS \
	parms/LCODE_DEFAULTS \
	parms/LDEPENDENCE_DEFAULTS \
	parms/LDIFF_TRACE_DEFAULTS \
	parms/LEMULATE_DEFAULTS \
	parms/LENCODE_DEFAULTS \
	parms/LFILE_DEFAULTS \
	parms/LGLOBAL_DEFAULTS \
	parms/LHOTSPOT_DEFAULTS \
	parms/LHPL_PD_DEFAULTS \
	parms/LHPPA_DEFAULTS \
	parms/LIMPACT_DEFAULTS \
	parms/LINLINE_DEFAULTS \
	parms/LINTERPRET_DEFAULTS \
	parms/LMARKPIPE_DEFAULTS \
	parms/LMIX_DEFAULTS \
	parms/LOBJSUMM_DEFAULTS \
	parms/LOPTI_DEFAULTS \
	parms/LPRED_OPTI_DEFAULTS \
	parms/LPRETTY_DEFAULTS \
	parms/LPRETTY_STYLE \
	parms/LPROBE_DEFAULTS \
	parms/LPROFILE_DEFAULTS \
	parms/LPROF_UTIL_DEFAULTS \
	parms/LREGALLOC_DEFAULTS \
	parms/LSAFE_DEFAULTS \
	parms/LSCHEDULE_DEFAULTS \
	parms/LSIM_DEFAULTS \
	parms/LSOFTPIPE_DEFAULTS \
	parms/LSPARC_DEFAULTS \
	parms/LSTARCORE_DEFAULTS \
	parms/LSUPERBLOCK_DEFAULTS \
	parms/LSUPERSCALAR_DEFAULTS \
	parms/LTAHOE_DEFAULTS \
	parms/LTI_DEFAULTS \
	parms/LTRACE_DEFAULTS \
	parms/LVALUE_PROFILE_DEFAULTS \
	parms/LVIRT_DEFAULTS \
	parms/LX86_DEFAULTS \
	parms/LX86TRACE_DEFAULTS \
	parms/MCODE_DEFAULTS \
	parms/MOPTI_DEFAULTS \
	parms/MOPTI_DEFAULTS_IA64 \
	parms/PANNOTATE_DEFAULTS \
	parms/PCODE_DEFAULTS \
	parms/PFLATTEN_DEFAULTS	\
	parms/PINLINE_DEFAULTS \
	parms/PIPA_DEFAULTS \
	parms/PLOOP_DEFAULTS \
	parms/PPROBE_DEFAULTS \
	parms/PROBE_HPPA \
	parms/PROBE_PLAYDOH \
	parms/PROBE_SPARC \
	parms/PROBE_X86 \
	parms/PSPLIT_DEFAULTS \
	parms/PTOC_DEFAULTS \
	parms/PTOL_DEFAULTS \
	parms/SIM_SPARC \
	parms/SM_DEFAULTS \
	parms/STD_PARMS \
	parms/STD_PARMS.compile_bench \
	parms/STD_PARMS.compile_benchmark \
	parms/STD_PARMS.IMPACT \
	parms/STD_PARMS.IMPACT.1_0 \
	parms/STD_PARMS.IPF-ITANIUM \
	parms/STD_PARMS.IPF-MCKINLEY \
	parms/STD_PARMS.ROAR \
	parms/STD_PARMS.SC140
