## scripts/Makefile.am
## This file is (ultimately) included by the top level Makefile.am, so all
## files need to be specified relative to the top level directory.

scriptsdir = $(prefix)/scripts

scripts_SCRIPTS = \
	scripts/addr_build \
	scripts/annot_format \
	scripts/annot_pfsum \
	scripts/annot_pfsum.pl \
	scripts/annot_sort \
	scripts/annot_source \
	scripts/ascii2binary \
	scripts/binary2ascii \
	scripts/Bindebug \
	scripts/build_docs \
	scripts/cb_freq \
	scripts/cmp_dir_trees \
	scripts/compile_bench \
	scripts/compile_benchmark \
	scripts/compile_list \
	scripts/copy_bench_src \
	scripts/copy_files \
	scripts/diff_bench_trace \
	scripts/diff_dir_trees \
	scripts/dospec \
	scripts/file_combine \
	scripts/find_bench_dir \
	scripts/find_bench_inputs \
	scripts/find_project_dir \
	scripts/gen_copy \
	scripts/gen_CtoP \
	scripts/gen_diff \
	scripts/gen_ext \
	scripts/gen_generic \
	scripts/gen_gprof_prep_ia64 \
	scripts/gen_Lamd \
	scripts/gen_Lannotate \
	scripts/gen_Lavliw \
	scripts/gen_Lblock \
	scripts/gen_Lcode \
	scripts/gen_Lget \
	scripts/gen_Lguide \
	scripts/gen_Lhpl_pd \
	scripts/gen_Lhppa \
	scripts/gen_Lhyper \
	scripts/gen_Limpact \
	scripts/gen_Linduct \
	scripts/gen_Linline \
	scripts/gen_Lmarkdoall \
	scripts/gen_ln \
	scripts/gen_Lnewtoold \
	scripts/gen_Lnoprobe_fortran \
	scripts/gen_Loldtonew \
	scripts/gen_Lopti \
	scripts/gen_Lprofile_lcode \
	scripts/gen_Lprofile_mcode \
	scripts/gen_Lsparc \
	scripts/gen_Lstarcore \
	scripts/gen_Lstatic \
	scripts/gen_Lsuperscalar \
	scripts/gen_LsuperscalarH \
	scripts/gen_Ltahoe \
	scripts/gen_Ltahoe_cb \
	scripts/gen_Lti \
	scripts/gen_LtoC \
	scripts/gen_Ltrace \
	scripts/gen_Lvirt \
	scripts/gen_Lx86 \
	scripts/gen_memannot \
	scripts/gen_merge_callname \
	scripts/gen_merge_PIP_result \
	scripts/gen_move \
	scripts/gen_pfmon \
	scripts/gen_Pinline \
	scripts/gen_Pprofiled_sc140 \
	scripts/gen_probed_lcode \
	scripts/gen_profiled_hppa \
	scripts/gen_profiled_lcode \
	scripts/gen_profiled_pcode \
	scripts/gen_profile_merge_lcode \
	scripts/gen_PtoC \
	scripts/gen_PtoC_probed \
	scripts/gen_PtoL \
	scripts/gen_PtoPannotate_internal \
	scripts/gen_PtoP-flatten \
	scripts/gen_Sum \
	scripts/gen_tar \
	scripts/gen_test_ia64 \
	scripts/gen_untar \
	scripts/get_bench.pl \
	scripts/hc \
	scripts/hmdesc \
	scripts/host_arch \
	scripts/ia64_compile_bench \
	scripts/interpret_bench \
	scripts/Lannot_bench \
	scripts/Lint_summary \
	scripts/Lmdes_build2 \
	scripts/Lprof_bench_lcode \
	scripts/Lprof_bench_mcode \
	scripts/Lprof_zipped_lcode \
	scripts/Lsim_bench \
	scripts/Lsim_count_bench \
	scripts/Lsim_mcb \
	scripts/Ltest_bench_lcode \
	scripts/Ltest_bench_mcode \
	scripts/Ltest_zipped_mcode \
	scripts/make_links.pl \
	scripts/md2txt \
	scripts/merge_pfmon.pl \
	scripts/merge_pfsam_new.pl \
	scripts/merge_pfsam.pl \
	scripts/MFlibs \
	scripts/MFmake \
	scripts/mkimpact_temp \
	scripts/new2oldctype \
	scripts/old2newctype \
	scripts/PDVR \
	scripts/Pmerge_ipc \
	scripts/print_bench_call_trace \
	scripts/print_default_project_info \
	scripts/print_impact_info \
	scripts/print_trace_info_new \
	scripts/print_trace_info_spiff \
	scripts/print_training_info \
	scripts/profile_oldS \
	scripts/read_compile_info \
	scripts/read_exec_info \
	scripts/read_info_old_interface \
	scripts/read_platform_info \
	scripts/read_project_info \
	scripts/remove_bench_src \
	scripts/RenumSPECIDs \
	scripts/sc140_compile_bench \
	scripts/sc140_sim_bench \
	scripts/sim_bench \
	scripts/sim_list \
	scripts/sim_summary \
	scripts/Split \
	scripts/SplitAll \
	scripts/Sum \
	scripts/Sumview \
	scripts/tbgen_profiled_hppa \
	scripts/tbLannot_bench \
	scripts/tbLsim \
	scripts/tbLsim_bench \
	scripts/tbprofile_hppa_bench \
	scripts/test_bench_info \
	scripts/test_bench_info_ia64 \
	scripts/test_list \
	scripts/Xtrace_bench

scripts_DST = $(scripts_SCRIPTS)

