## benchmarks/NONE/Makefile.am
## This file is (ultimately) included by the top level Makefile.am, so all
## files need to be specified relative to the top level directory.

benchmarks_NONEdir = $(prefix)/benchmarks/NONE

dist_benchmarks_NONE_DATA = \
	benchmarks/NONE/compile_info benchmarks/NONE/compile_parms \
	benchmarks/NONE/exec_info_input1
